--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,10 +1,29 @@
+{% macro svgIcon(name, classNames) %}
+<svg class="icon {{ classNames }}">
+  <use xlink:href="img/sprite.svg#{{ name }}"></use>
+</svg>
+{% endmacro %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Medium-like SCSS Boilerplate</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <script src="./main.js" type="text/javascript"></script>
+    {{ svgIcon('ico-message', 'icon--lg color--primary') }}
+    {{ svgIcon('ico-message', 'icon--md color--primary') }}
+    {{ svgIcon('ico-message', 'icon--sm color--primary') }}
+    <br>
+    {{ svgIcon('ico-place', 'icon--lg color--danger') }}
+    {{ svgIcon('ico-place', 'icon--lg color--warning') }}
+    {{ svgIcon('ico-place', 'icon--lg color--info') }}
+    <br>
+    {{ svgIcon('ico-flag', 'icon--md color--info') }}
+    {{ svgIcon('ico-house', 'icon--md color--info') }}
+    {{ svgIcon('ico-clock', 'icon--md color--info') }}
+
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
