svg4everybody lib

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,6 +30,7 @@
     {{ svgIcon('ico-house', 'icon--md color--info') }}
     {{ svgIcon('ico-clock', 'icon--md color--info') }}
 
+    <script src="js/lib/svg4everybody.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
